# cliques

./: .gitignore  README.md  landscapes_script.sh
Severability/: adjacency_matrix.m  associate.m  comm_plot.m  findorphans.m  keygen.m  node_optimise.m  norm_mutualinfo.m  oldcode.m  optimise.m  sev0.m  sev_multi_level.m  sev_node.m  sev_node_bi.m  sev_one_subcomm.m  sev_partition.m  sev_steepest_descent.m  sev_steepest_descent_bi.m
Severability/image-analysis/: avg_luminance.m  highlighted_image.m  image_communities.m
Stability_Matlab_Package/: .directory  CODE_HISTORY.txt  INSTALL.txt  Install_Stability.m  README.txt
Stability_Matlab_Package/Combinatorial/: community.cpp  community.h  graph_binary.cpp  graph_binary.h  stability_louvain_LCL.cpp
Stability_Matlab_Package/Normalised/: community.cpp  community.h  graph_binary.cpp  graph_binary.h  main_varinfo_new.cpp  stability_louvain_LNL.cpp
Stability_Matlab_Package/demo/: protein.mat  ring_of_rings.mat
cliques/: .gitignore  CMakeLists.txt  README.txt  landscapes_script.sh
cliques.js/: .project
cliques.js/src/: scalers.js  selection_box.js
cliques/algorithms/: aglob.h  all_communities.h  all_partitions.h  bottleneck.h  connectivity.h  hierarchical_stability_graphs.h  hill_climbing.h  hsg.h  kernighan_lin.h  louvain.h  maxima.h  meta_dynamics.h  neighbourhood.h  robustness.h  sample.h  space.h  stability.h  stability_corr.h  stability_info.h  varofinf.h
cliques/cliques/: config.py
cliques/cxx/: varinfo.m
cliques/cxx/cliques/: CMakeLists.txt  KL_matlab_interface.cpp  boost_partition.cpp  find_maxima.cpp  graphhelpers.h  helpers.h  lemon_graph.cpp  louvain_matlab_interface.cpp  matlab_interface.cpp  partition.cpp  random_walk.cpp
cliques/cxx/cliques/algorithms/: CMakeLists.txt  aglob.h  all_communities.h  all_partitions.h  bottleneck.h  complexity.h  connectivity.h  hsg.h  kernighan_lin.h  louvain.h  maxima.h  modularity.h  module.h  neighbours.h  partitions.h  robustness.h  sample.h  scalers.h  space.h  stability.h  stability_info.h  testexpokit.cpp  varofinf.h
cliques/cxx/cliques/algorithms/internals/: generators.h  internals.h  linearised_internals.h  linearised_internals_comb.h  linearised_internals_corr.h  linearised_internals_info.h
cliques/cxx/cliques/cmake/modules/: FindGraphViz.cmake
cliques/cxx/cliques/drawing/: colour_maps.h  draw.h
cliques/cxx/cliques/helpers/: conversion.h  edit_distance.h  logger.h  math.h  output.h
cliques/cxx/cliques/interactive/js/: file.js  setup.js
cliques/cxx/cliques/nldr/: nldr.h
cliques/cxx/cliques/scripts/: CMakeLists.txt  compare_robustness.cpp  create_communities.cpp  create_landscape.cpp  create_multilandscape.cpp  draw_landscape.cpp  find_communities.cpp  graph_to_regions.cpp  sample_landscape.cpp  visualise_landscape.cpp
cliques/cxx/cliques/structures/: common.h  disjointset.h  graph.h  make_graphs.h  partition.h  partition_vector.h  tiny_partition.h  vector_partition.h
cliques/cxx/cliques/tests/: CMakeLists.txt  bottleneck.cpp  disjointset.cpp  draw.cpp  draw_all_partitions.cpp  kernighanlin.cpp  louvain.cpp  maxima.cpp  varofinf.cpp
cliques/data/: celegans.edj  demograph_stability_n640.edj  renaud_20.pairs  triangle_with_selfloops.edj  triangletest.edj
cliques/doc/: Doxyfile
cliques/drawing/: draw.h
cliques/ext/: community.py  draw_community.py
cliques/helpers/: conversion.h  edit_distance.h  graphhelpers.h  helpers.h  io.h  lists.h  logger.h  make_graphs.h  math.h  output.h  scalers.h  stochastic.h
cliques/interactive/: view.html
cliques/landscapes/: basins.h  landscape_maxima.h  landscape_meta_dynamics.h  landscape_space.h  non_linear_dim_reduction.h  sample_from_landscape.h
cliques/matlab/: Install_Stability.m  stability.m  stability_new.m
cliques/nldr/: nldr.h
cliques/optimisation/: hill_climbing.h
cliques/quality_functions/: stability.h  stability_corr.h  stability_full.h  stability_info.h  stability_info_full.h
cliques/scripts/: CMakeLists.txt  compare_robustness.cpp  create_communities.cpp  create_json.py  create_landscape.cpp  create_multilandscape.cpp  draw_landscape.cpp  find_communities.cpp  find_complexity.py  graph_to_regions.cpp  sample_landscape.cpp  scatter.py  similarity_landscape.py
cliques/structures/: bitsetpartition.h  common.h  disjointset.h  graph.h  make_graphs.h  tiny_partition.h  vector_partition.h
cliques/tests/: CMakeLists.txt  bottleneck.cpp  disjointset.cpp  draw.cpp  draw_all_partitions.cpp  edit_distance.cpp  graph_to_hsg.cpp  kernighanlin.cpp  louvain.cpp  louvain_pairs.cpp  maxima.cpp  test_expokit.cpp  test_main.cpp  test_math.cpp  test_optimisation.cpp  test_vector_partition.cpp  varofinf.cpp
data/: celegansweighted.edj  ladder.pairs  renaud_16.pairs  triangle.edj
data/Aaron/: COSNV1.txt  COSNV10.txt  COSNV14.txt  COSNV18.txt  COSNV25.txt  COSNV6.txt
data/Louvain-multipleDegree-scale3-N6/: coords_1002_rest_s2_N6.txt
data/Louvain-multipleDegree-scale3-N7/: coords_1002_rest_s2_N7.txt  corr_1002_rest_s2_N7.txt
data/brain_stabilities/: COSNV1.stdout  COSNV2.stdout
data/graphs/: barbell_n8.nke  barbell_sym.edj  karate.edj  path_nx.edj  power_europe.edj  renaud_n16.edj  ring_n6.edj  ring_of_rings_weighted.edj  ring_of_small_worlds.edj  xring_n12.edj
data/matlab/: ladder_graph.m
data/weights/: COSNV15.txt  COSNV2.txt  COSNV27.txt  COSNV28.txt  COSNV29.txt  COSNV30.txt  COSNV9.txt
doc/: Doxyfile  overview.md
helper_scripts/ch-sny-data_backup/: README  backup-script.sh  install.sh
helper_scripts/graph_format_conversion/: convertAdjListGraphToPajekGraph.m  convertAdjMatrixToPajekGraph.m  convertPajekToAdjMatrix.m  (+1 more)
jscliques/: graph.js  setup.js  view.html
matlab/: Install_Stability.m  KL_matlab_interface.cpp  README.txt  louvain_matlab_interface.cpp  sampling_test.m  stability_new.m  varinfo.m
protein-graph/: README  community_highlight.py  fullrun.sh  graph_convert.sh  gromacs-emonly.sh  gromacs.sh  preEMcg.mdp  preEMsteep.mdp  preMD.mdp  prePRMD.mdp
small_graph_landscapes/: compare_robustness.py  landscapes_script.sh  loop_over_landscape_graph.sh
tex/: main.tex
(+792 files in other folders)
